--- a/Goverment/.classpath
+++ b/Goverment/.classpath
@@ -5,5 +5,7 @@
 	<classpathentry kind="lib" path="src/beautyeye_lnf.jar"/>
 	<classpathentry kind="lib" path="src/mybatis-3.4.6.jar"/>
 	<classpathentry kind="lib" path="src/ojdbc6.jar"/>
+	<classpathentry kind="lib" path="src/mysql-connector-java-5.1.47.jar"/>
+	<classpathentry kind="lib" path="src/mssql-jdbc-6.1.0.jre8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
