--- a/Goverment/.classpath
+++ b/Goverment/.classpath
@@ -7,5 +7,7 @@
 	<classpathentry kind="lib" path="src/ojdbc6.jar"/>
 	<classpathentry kind="lib" path="src/mysql-connector-java-5.1.47.jar"/>
 	<classpathentry kind="lib" path="src/mssql-jdbc-6.1.0.jre8.jar"/>
+	<classpathentry kind="lib" path="src/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="src/poi-3.9.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
