--- a/Goverment/src/local_message.properties
+++ b/Goverment/src/local_message.properties
@@ -1,5 +1,5 @@
-databasetype=
-databasename=
-ipaddress=
-username=
-password=
+databasetype=mysql
+databasename=test
+ipaddress=localhost
+username=root
+password=123
